overflow fix

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -137,6 +137,7 @@ color: #1b1b1b;
     border-radius: 10px;
     display:flex;
     flex-direction: column;
+    z-index: -2;
     box-shadow:
         0.3px 0.5px 0.7px hsl(var(--shadow-color) / 0.36),
         0.8px 1.6px 2px -0.8px hsl(var(--shadow-color) / 0.36),
@@ -152,12 +153,13 @@ color: #1b1b1b;
 
 .pokemon li {
     display: flex;
-    color: white;
+    color: #444242;
     font-family: var(--main-font);
     font-size: .7rem;
     padding: .3rem;
+    z-index: -1;
     border-radius: 8px;
-    filter: brightness(1.3 );
+    filter: brightness(1.2);
     box-shadow:
         0.3px 0.5px 0.7px hsl(var(--shadow-color) / 0.34),
         0.4px 0.8px 1px -1.2px hsl(var(--shadow-color) / 0.34),
